--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <script src="https://www.paypal.com/sdk/js?client-id=AaZszcmnfs1ci8VctOBIoBz8Zs5KnsLFH2ugYwmral-XBPTCYT_cFd9IDKqmk-Dvtke3IpJ_ssD8mfYe&vault=true&intent=subscription"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=AaZszcmnfs1ci8VctOBIoBz8Zs5KnsLFH2ugYwmral-XBPTCYT_cFd9IDKqmk-Dvtke3IpJ_ssD8mfYe&currency=USD"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
